--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank">大马前总理卷入新案 涉下令谋杀蒙古模特</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/GettyImages-991185274-150x120.jpg" align ="left"></a>深陷腐败指控的马来西亚前总理纳吉布·拉扎克（Najib Razak），近日又被卷入了一桩谋杀蒙古模特的丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/17/n11727211.md#1" target="_blank">【拍案惊奇】港澳珠桥上的秘辛 习近平访澳门</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/17/n11727211.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e10f1e77f9151a_ttl7dayfQ8_bg1216-150x120.jpg" align ="left"></a>上周的节目中，一位出身大陆军人世家的观众kevin给我们留言，讲述了他对香港反送中的认识。最近，他又给我们节目邮箱写信，他首先对我们节目表达支持，说我们是YouTube上质量最高的节目之一，这里谢谢Kevin。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/16/n11725904.md#1" target="_blank">新闻传媒界法轮功学员遭中共迫害综述（上）</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/16/n11725904.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-9-150x120.jpg" align ="left"></a>中共自1999年迫害法轮功以来，把新闻媒体作为散布谎言的工具迷惑百姓、维持打压，并对在中国新闻传媒系统就职的法轮功学员进行残酷的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/16/n11726478.md#1" target="_blank">中共参军许进不许出 一大学生退伍遭重罚</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/16/n11726478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/1312231116562320-150x120.jpg" align ="left"></a>美国媒体周一（12月16日）报导，中共参军许进不许出，一位执意退出军队的大学生遭受重罚之事。报导指出，中国（中共）军队中有约200万名士兵，但很难想像因无法忍受严苛军事生活、选择退出的一个个案却在中国国内引发全民关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11736771.md#1" target="_blank">四川轻化工大学副教授因言受罚</a><br></h3>中国大专院校学术自由空间持续萎缩。四川轻化工大学副教授李志被指发表不当言论，违反了高校教师准则，近期受到校方行政处罚，并被调离其所任职的马克思主义学院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11732974.md#1" target="_blank">告诉人真相 法轮功学员丁宝云面临非法庭审</a><br></h3>日前，山东济南仲宫镇法轮功学员丁宝云接到章丘区法院人员电话，让她去拿传票、开庭通知书和起诉书。章丘区法院欲在12月24日对丁宝云非法庭审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11731456.md#1" target="_blank">【唐靖远快评】中共战狼式大外宣频频触礁</a><br></h3>最近这两天，在中共大外宣领域接连发生大事件，而且当事人称得上是一个比一个大牌，一时间网络舆情汹涌，可以说赚足了公众的目光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:02 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/17/n11727038.md#1" target="_blank">港人乘穿梭巴士往澳门 被珠海公安带走</a><br></h3>大陆公安证实一名本港男子，上周五乘坐前往澳门的港珠澳大桥穿梭巴士，在东人工岛被公安带走，声称其涉及7年前的手机走私案。民主党立法会议员涂谨申，批评大陆擅自在东人工岛设置检查站，犹如设新“送中”陷阱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:58 AM							</td></tr>
