--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/15/n11658070.md#1" target="_blank">死伤数百人 江苏响水“3·21”爆炸出调查报告</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/15/n11658070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-1131960651-3-150x120.jpg" align ="left"></a>今日（11月15日），中共官方公布江苏响水天嘉宜化工有限公司“3·21”特别重大爆炸事故调查报告。同时，中共江苏省委常委、常务副省长樊金龙和副省长费高云被问责。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 7:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/15/n11657783.md#1" target="_blank">中国化工企业今年已减少1700家</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/15/n11657783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-1131960651-3-150x120.jpg" align ="left"></a>据中国石油和化学工业联合会调研统计数字显示，截至今年9月底，中国化工企业已减少约1,700家。而据中商产业研究院监测数据，截至2018年底，中国化工行业企业共计23,513家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 3:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/14/n11656490.md#1" target="_blank">传北京儿童医院、宣武医院出现鼠疫病例</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/14/n11656490.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1280px-Yersinia_pestis_fluorescent-150x120.jpg" align ="left"></a>继来自内蒙古的两例鼠疫确诊患者引发关注后，14日上午，网上疯传北京儿童医院、宣武医院发现鼠疫患者的消息。北京当局紧急“辟谣”，称未出现新发病例，民众则不满消息被封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 5:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/14/n11656034.md#1" target="_blank">不只内蒙 甘肃9月曾现鼠疫死亡病例</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/14/n11656034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/08/908051910581497-150x120.jpg" align ="left"></a>两名中国内蒙古患者在北京确诊鼠疫的消息引发关注。事实上这是今年中国大陆第二次被确认的鼠疫病例，上一次是一个半月前，发生在甘肃酒泉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 1:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/3/n11696472.md#1" target="_blank">北京顺义一厂房发生爆炸 已致1死11伤</a><br></h3>今天（3日）凌晨，北京顺义区牛栏山镇有工厂发生爆炸，事故造成11人送医救治、2人失联、1人死亡，目前正调查爆炸原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/2/n11694762.md#1" target="_blank">河南邓州拆除老电视塔 砸死1人致2伤</a><br></h3>12月2日上午11时18分左右，河南南阳邓州市老广播电视塔在拆除作业过程中，几十米长的起重机臂突然断裂，导致1死2伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 4:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/27/n11683629.md#1" target="_blank">云南一高速路在建隧道口坍塌 4死8被困</a><br></h3>11月26日晚上，云南临沧市凤庆县云凤高速公路第二合同段安石隧道出口坍塌。截至27日上午9时，救出14人，其中4人死亡10人受伤，还有8人仍被困。
 
