--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -4,6 +4,8 @@
 这种抑郁实际上是由于心脏和心经受到伤害造成的，叫“心郁”。
 
 心郁的特点，就是难以感到快乐，甚至对本来很感兴趣的事情失去了兴趣。如何治疗心郁的抑郁症？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:39 AM	</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11760337.md#1" target="_blank">猛禽猫头鹰变害羞竉物 见陌生人躲着抓主人裤角</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11760337.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c135135d7e1233330991afb61c7cb5c6-150x120.jpg" align ="left"></a>凶悍猛禽类的猫头鹰，近几年却变成日本人的热门宠物。变成竉物的猫头鹰是什么模样呢？一位住大阪的网友谷やん，日前在推特上发表了一张猫头鹰害羞躱主人脚后的照片，超萌的表情融化万名网友。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 1:02 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11760401.md#1" target="_blank">荷兰“地平面红绿灯”低头族专用 防交通意外</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11760401.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/efcda259fa82d56daef11fe94560c11c-150x120.jpg" align ="left"></a>行人过马路时，传统红绿灯都装置在跟行人视线平行的高处上，而现在很多国家的城市却多装了放在地平面上的红绿灯，这些贴心的设计是针对低头族设计的，以期降低低头族发生事故的风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 12:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770495.md#1" target="_blank">多伦多附近小城镇房价飞涨 物业投资风正浓</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770495.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_348914792-150x120.jpg" align ="left"></a>前几年多伦多城郊房价飞涨，迫使许多人越搬越远，带动尼亚加拉市、圣凯瑟琳斯和金斯顿等周边小城镇房价跟着涨，许多人抓住这一机遇，做起了房产投资生意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 7:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766171.md#1" target="_blank">【胡乃文开讲】消口臭其实很简单！中医教你1招除臭</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766171.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Bad-breath-010420-150x120.jpg" align ="left"></a>口臭问题困扰了很多人，大约50%～60%的人都有口臭。为什么口臭会找上你？一般来说，90%的口臭是口腔问题造成，10%是口腔以外问题所致。想要去除口臭，其实很简单。你有口臭吗？30秒自我检测。如果有口臭怎么办？中医有一个简单的解决方法：到中药房去买一些白豆蔻，早中晚各在嘴里放一颗，可使口腔不臭，改善口臭问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11768725.md#1" target="_blank">站在使用中的微波炉前方安全吗？</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11768725.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/05/1503132330502483-150x120.jpg" align ="left"></a>人们知道日常生活中经常使用的微波炉有辐射线，所以在使用时都会避免靠近微波炉，但站在它前方真的就不安全吗？还有没有其他要注意的事项？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:32 PM			</td></tr>
@@ -37,8 +39,6 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11764069.md#1" target="_blank">子女搬出自立 房子太大太空 空巢老人怎么办？</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11764069.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_211775290-150x120.jpg" align ="left"></a>随着子女长大成人，陆续搬出独立，越来越多婴儿潮一代父母发现，日常生活虽清闲了许多，但也伴随孤独和忧郁，出现“空巢综合症”。处于这个人生阶段，许多老人都得问自己，是大屋换小房？还是换幢更豪华的房子？或把目前房屋装修一新？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:17 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11764045.md#1" target="_blank">靠1欧元拍卖计划 意大利乡村小镇展新颜</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11764045.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1469255324-150x120.jpg" align ="left"></a>去年1月，媒体报导意大利西西里森布卡小镇（Sambuca）一欧元（相当于1.47加元）起价拍卖当地16幢政府名下住宅，条件是买下后，买家花至少1.5万欧元装修，并支付小镇5,000欧元押金只到装修完成。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 4:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-150x120.jpg" align ="left"></a>武汉近日爆发“不明病毒性肺炎”，民众担忧多年前夺走数百条人命的SARS（严重急性呼吸道症候群）重现。由于中共官方一向有隐瞒疫情的前科，专家建议身在疫区或近日前往当地的民众一定要做好防范。为因应武汉市的肺炎流行疫情，台湾已对武汉直航的班机进行登机检疫，希望将疫情阻绝于境外。面对不明肺炎 民众如何防范？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:29 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11763643.md#1" target="_blank">加国新屋房价跌 多伦多温哥华跌幅最突出</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11763643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1023556714-150x120.jpg" align ="left"></a>加拿大统计局数据显示，去年11月新屋房价指数（NHRI）出现微幅下跌。总体看来，当月加国新屋房价指数虽基本没什么变化，但呈与两极发展趋势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:20 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/31/n11756724.md#1" target="_blank">晚上穿袜子睡觉 调节体温又助眠 还有4个好处</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/31/n11756724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/sleep-with-socks_159094022-150x120.jpg" align ="left"></a>人每天都需要7个小时的睡眠。不少人会有难以入睡的情况，穿袜子睡觉能让你尽快睡着，更有许多其它好处。为什么穿袜子睡觉可以助眠？首先来看看人身体的体温调节运作模式。人的核心体温和生理时钟息息相关。睡觉时穿上袜子，可以让双脚暖和起来，增加足部的血液流量，降低核心体温，告诉大脑“该睡觉了”。穿袜子睡觉带来的四大好处：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767534.md#1" target="_blank">汽车维修问与答：引擎漏油的原因</a><br></h3>汽车维修问与答
 
 读者James问：李师傅您好！我有一辆98年的本田雅阁两门跑车，已有20多年历史，但行驶平稳，从未有大毛病，不舍得放弃。近几个月发现引擎油缓慢漏出，外壳被油包裹，两次送去普通车行清洗引擎外壳后，都未发现任何问题。到本田经销商检查后说，可能需更换Oil Pump Seal和Distributor，需.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:14 PM			</td></tr>
