--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -19,18 +19,6 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11761363.md#1" target="_blank">【名家专栏】中共式审查制度正向世界扩散</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11761363.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/88182999-1200x698-150x120.jpg" align ="left"></a>中国共产党痛恨信息的自由传播和思想的自由表达。中共的领导人知道，他们的继续存在依赖于他们扼杀个人意志、政治表达和人权的能力——而所有这些思想和权利都是香港人正在竭力争取的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11761870.md#1" target="_blank">程晓容：百万港人元旦游行 2020抗共主题延续</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11761870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001010413102188-1-150x120.jpg" align ="left"></a>维多利亚公园和街头人山人海，口号声不绝于耳。反送中运动历时半年多，元旦大游行再次冲击中共政权，开启了2020抗共潮的序幕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 6:17 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11762141.md#1" target="_blank">袁斌：中共恐惧的“规模性失业潮”正扑面而来</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11762141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/dfed3f93b4d5b2bfcee7e588808f345c-150x120.jpg" align ="left"></a>2019年12月10日至12日，被官媒称为“定调2020年经济工作”的中共经济工作会议在北京举行。如同去年底的中共经济工作会议一样，这次会议继续强调“六稳”，即稳就业、稳金融、稳外贸、稳外资、稳投资、稳预期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767452.md#1" target="_blank">李春草：天灭中共此其时</a><br></h3>奸党逆天霸家园
-假扮公仆贪无厌
-践踏人权标主权
-出卖后土何其癫
-祸加港人狼不仁
-虐流世界孔作掩
-魔兽焉谈价值观
-幽灵才喜淫秽乱
-否德不耻猴沐冠
-腥闻薰天奴自干
-先锋活摘肾与肝
-党贵作梦安知惭......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767432.md#1" target="_blank">振玉：寄语台湾</a><br></h3>南歌子.寄愿
 宝岛清清水，
 蓬湖湛湛湾。
@@ -86,5 +74,9 @@
 朋友笑我痴
 脑子被水淹......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11762112.md#1" target="_blank">雪绮：见群鸡退鹰  反观中共末日</a><br></h3>美国伊利诺州一座农场的鸡舍，被妄欲享受饱食鸡肉大餐的老鹰闯入，却未料竟反遭鸡群围剿、无路可逃，终狼狈离场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:13 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/2/n11761788.md#1" target="_blank">金浴凤：元旦寄语迷中帝</a><br></h3>打虎威振山河动，贪权足陷蟾迷宫；
+思圄破残马列里，道惑倿嬖左右中；
+一路撒金不嫌远，阻川徘徊应旋踵；
+台港自由是典范，苏联专制成警钟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/txyzum203/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/txyzum203/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/txyzum203/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
