--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -2,9 +2,10 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/16/n11726378.md#1" target="_blank">【三国英雄】父兄遇害 腹背受敌 曹操如何应对</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/16/n11726378.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d12f82d409b565bdf44500a5bba3f8d0-320x200.jpg" align ="left"></a>曹操不仅父亲和兄弟被人杀害，还被曾经的好兄弟背后捅了刀子，曹操又将如何面对？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:57 AM	</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771596.md#1" target="_blank">纪实散文：一夜惊梦（17）</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771596.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1907161621212483-150x120.jpg" align ="left"></a>先生的泪，一滴滴
 无声地流下
+
 每当先生听着那首生日祝福，目光飘渺，神游物外，斜靠着椅背，以手托腮，眼角点点濡湿。我知道，先生又在回想劳教所的岁月，思念他的同道们。
 
-我一声不吭，静静地陪他坐着。许久，许久，先生拉起我的手，轻轻抚摸着。声音低沉，如泣如诉：“在劳教所，我死过两回。那么死沉死沉的机床，一大堆人都抬不.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 2:23 PM			</td></tr>
+我一声不吭，静静地陪他坐着。许久，许久，先生拉起我的手，轻轻抚摸着。声音低沉，如泣如诉：“在劳教所，我死过两回。那么死沉死沉的机床，一大堆人都.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 2:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11764853.md#1" target="_blank">《出门访古早》之厝边灶下代序</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11764853.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_82809055-150x120.jpg" align ="left"></a>我不是美食者，祇要合情趣的都吃，近在厝边，远处也有些常常思念的饮食料理的朋友，所以，两肩担一口，台北通街走。但每次出门访问，就多一次感慨，过去的古早味越来越少了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/9/7/n11505367.md#1" target="_blank">【医案】坐立难安</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/9/7/n11505367.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1406130851011886-150x120.jpg" align ="left"></a>人生很多事，都令人坐立难安，例如：放榜前，求职前，婚前，生产前，约会前，开刀前，压力前......等等，多数坐立难安的状况会随情境改变而结束，怎会有人坐立难安，持续2年还无法排除？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:32 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/10/1/n11559167.md#1" target="_blank">罂湖乡民打大老虎</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/10/1/n11559167.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/92bae7276c1879c710a2fe3bc866c796-150x120.jpg" align ="left"></a>一只老虎，虎牙长三寸、虎须似钢丝，身与尾各长九尺，重八百多斤，闯入民家，折腾了一天。王家周围八方的男女老少，都好奇来看虎，一时门庭若市，把王家都堵塞了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 9:47 AM			</td></tr>
