--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -11,7 +11,7 @@
 &nbsp;......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 12:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/9/1/n11492087.md#1" target="_blank">法兰克福中国节上 民众谴责中共迫害法轮功</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/9/1/n11492087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/365285D4-C993-41B7-A03E-8C2727AA590F-150x120.jpeg" align ="left"></a>8月30日至9月1日，法轮功学员在法兰克福市内举行的“中国节”期间，举办了信息日活动，向民众揭露中共对法轮功的残酷迫害并征集反迫害签名，得到许多民众的支持，其中明白真相的华人声明退出中共组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 7:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank">30多国法轮功学员聚伦敦 在著名景点洪法</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48642438366_5ccb244540_o1-150x120.jpg" align ="left"></a>“我曾经是一位太极拳教练，2012年我到了中国的武当山，因为我对气功非常好奇，中国一位中医大夫告诉我，在中国有一种气功是被禁止的。我当时听到这个消息非常吃惊，因此开始在网络上查询关于法轮大法的消息，当看到法轮大法的书时，我立刻就明白了：就是我要找的！我终于找到了法轮大法！”戈杰?查代（Gorger Cadez）说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 4:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/10/1/n11558853.md#1" target="_blank">每日三退声明精选（2019/09/30）</a><br></h3>尽管邪党的极力宣传国殇日，全国到处挂满血旗，人们还是看清共产党的末期与邪恶，我们声明退出中共一切组织，远离邪灵，选择光明。愿《九评》传的越来越广，愿所有被共产党毒害的人都能清醒认识其邪教本质，唾弃它，解体它，还人一个清明世界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 11:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/f04334acc2f7f6640bab6c1a76a7987b-150x120.jpg" align ="left"></a>瑞士伯尔尼法轮功学员潘淑珍在卢塞恩景点劝中国游客三退的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/9/30/n11556078.md#1" target="_blank">每日三退声明精选（2019/09/29）</a><br></h3>邪党过生日闹得鸡犬不宁，民营企业几天一检查，为了到达空气污染不太严重北京周围几百公里一周前就汽车限号出行，很多快递不许进京，往新疆的一切快递干脆停运，也许是发快递的公司怕惹麻烦以免被共产党处罚，虽然歌声不断街道插满红旗，我们从这紧张的空气中看到共产党的恐慌，真是做贼心虚，亡党在即。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月30日 11:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/9/29/n11553451.md#1" target="_blank">每日三退声明精选（2019/09/28）</a><br></h3>最近有机会到大陆以外的地方去看，看到了很多关于中共的历史真相，也看到了香港反送中的正义之举。早就看透中共，但是苦于自己不知道有这个途径，直到现在我才在这里退出党团队。生于乱世，有种责任。退出党团队，不与中共一起做恶，是在这个被中共搞乱的时代里我自己能够做的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 10:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/9/25/n11544882.md#1" target="_blank">每日三退声明精选（2019/09/24）</a><br></h3>我在大学时由于成绩优异，被国内共党虚假消息洗脑，在学校和学院领导不断劝说下加入中共。后来来到美国，看到听到大量被中共隐藏和改编的事实真相，十分震惊和愤怒。于是在大约两年半前立即停交党费，与共产党邪恶组织脱离关系。由于担心共匪虚构事实，在此公开声明，我早已与中国共产党脱离关系，并且支持全世界正义联盟打倒共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:38 AM							</td></tr>
