--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,8 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11760382.md#1">李旭彤：挖掘五千年文明惊世宝藏（13）</a><br>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772255.md#1">李中泠：武汉肺炎疫情恐遭隐瞒 国人如何自保？</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772102.md#1">金言：展望2020 中国经济从暴富到暴雷</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771284.md#1">美国故事：平民外交绘出一道风景线</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770856.md#1">【名家专栏】美国应实行全国选民身份证吗？</a><br>
@@ -20,8 +22,6 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11769383.md#1">川人：精准除恶，川普的果敢行动让人敬佩</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11768861.md#1">高天韵：日剧《北国情》跨越21年的经典</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11769323.md#1">陈思敏：中共时隔10年放行主粮转基因的背后</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11768600.md#1">黄天辰：恐怖组织头目被美击毙 惊吓了谁</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11768923.md#1">海风：林郑月娥将走到尽头</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -92,7 +92,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,345,623 人
+- 共 349,347,625 人
 ```
 </strong>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
