--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -7,7 +7,6 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank">程晓容：国际风云印证《九评》精准论断</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911120304312188-150x120.jpg" align ="left"></a>《九评》关乎中国和世界。这部巨著能够帮助人们深入了解中国现当代史及共产主义运动，从而对中共的言行及动机做出清醒的判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 4:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666092.md#1" target="_blank">九评15周年 看大陆民众弃中共 句句真情</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/a9001d8cd57c0fd94b9b45db8a1c1bc6-600x399-150x120.jpg" align ="left"></a>15年前，大纪元在2004年11月19日发表了《九评共产党》系列社论，使广大民众第一次深刻和全面地了解中共的丑陋历史和邪恶本质，从而走上抛弃中共的自救之路——三退（退出中共党、团、队组织）。如今3亿4千多万的民众声明退出中共的一切组织，走向新生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 9:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666926.md#1" target="_blank">《九评》发表15周年 加拿大各界华人在觉醒</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666926.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/04-1-1-150x120.jpg" align ="left"></a>2004年11月19日，《大纪元时报》系列社论《九评共产党》（简称《九评》）横空出世，被世人喻为旷世奇书，并打出“天灭中共”的震世警言，引发了持续15年的“三退”（退共产党、退共青团、退少先队）大潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/27/n11683659.md#1" target="_blank">每日三退声明精选（2019/11/26）</a><br></h3>前几年一桩冤案降临到自己头上，结合现在在外网了解的一切才真正认识到了中共高层及其官僚的邪恶本质，中共篡政70年以来，一直在用谎言与暴政欺骗奴役压榨中国人民，垄断一切公共资源盘剥中国人民。其公检法司暴力机构基本都是中共的整人掠财帮凶，他们办案基本都是乱作为、毫无底线与人性，以抢劫财富为目的，施以恐吓、引诱、欺骗、刑讯逼供等手段，并强迫受害者必须按照他们事先编排.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/26/n11680835.md#1" target="_blank">每日三退声明精选（2019/11/25）</a><br></h3>我目前在维州念书，之前在中国读大学的时候为了个人上进，并没有太多的了解中共的本质，随大流入了党。但是出国之后接触到了国外的信息之后慢慢思想有些变化。很多时候觉得国内的教育很有问题，让人变的没有逻辑性，不会去自主思考前因后果做出自己的判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 9:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/25/n11678229.md#1" target="_blank">每日三退声明精选（2019/11/24）</a><br></h3>我几乎天天看大纪元、新唐人，使我更加看清了共产党的邪恶本质，并在力所能及条件下，揭露中共，弘扬自由、民主、法治的普世价值观，为中国民族的觉醒和未来，奋笔疾书，尽量感染身边的每一个人，家人、亲戚、朋友、同学，特别是今年以来的中美贸易战和香港民众反送中运动，为中国的未来，尽自己一份绵薄之力。在此，我庄严声明，退出中国共产党党籍，永不反悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/24/n11676572.md#1" target="_blank">每日三退声明精选（2019/11/23）</a><br></h3>打土豪分田地，害死那么多地主，是地主错了么？
@@ -44,5 +43,6 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/2/n11628455.md#1" target="_blank">每日三退声明精选（2019/11/01）</a><br></h3>年少时缺乏对世界的认知，被教唆下加入了共青团。年龄增长，接触到更多事物，渐渐了解到共产党及其相关组织邪恶的真实面目。作为具备公民意识的人，应当远离作恶的组织，在此，我谨代表我自己退出中国共青团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月02日 12:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/1/n11626309.md#1" target="_blank">每日三退声明精选（2019/10/31）</a><br></h3>上学时，我受蒙骗，加入了共青团和少先队。工作后，我逐渐看清了共产党欺骗成性、颠倒黑白、贪污腐败的嘴脸，深恶痛绝。我爷爷是国民党军官，1949年去了台湾，我奶奶带着我父亲等留在老家。我奶奶为了保护家人，被迫捐出了所有土地，可是我的父亲还是被剥夺了上学的机会。如今，共产党要拆除我的祖宅，在原址修建假的古宅，发展古镇经济。我们欲哭无泪，即将痛失家园，却无处伸冤。一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 11:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/10/30/n11621413.md#1" target="_blank">每日三退声明精选（2019/10/29）</a><br></h3>共产党确实坏，它不仅破坏中国文化摧毁中华文明，不断的制造各种政治运动，使中国人苦难深重，现在又千方百计的欺诈老百姓，用老百姓的钱粉饰大好形势，对善良法轮功残酷迫害，这都是邪恶党的本性决定的，现在我申明退出党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 12:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/10/28/n11616747.md#1" target="_blank">每日三退声明精选（2019/10/27）</a><br></h3>我声明退出贪污成风、腐化成性、欺骗愚弄百姓、破坏社会生产力、独裁傲慢、自大膨胀、践踏法律、破坏法治环境、倒行逆施、封建复辟、蔑视生命、颠倒黑白、邪恶不赦的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 11:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/txyzum203/djy/blob/master/gb/nf3046_2.md#1<br><a href="https://github.com/txyzum203/djy/blob/master/gb/nf3046_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/txyzum203/djy/blob/master/gb/nf3046_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_2.htm">http://www.epochtimes.com/gb/nf3046_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
