--- a/gb/ncid283_2.md
+++ b/gb/ncid283_2.md
@@ -28,6 +28,6 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11753833.md#1" target="_blank">两大因素 韩国央行预计大陆明年GDP增长破6%</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11753833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/economy-construction-tian-jing-GettyImages-474029480-600x400-150x120.jpg" align ="left"></a>韩国央行12月29日表示，大陆经济明年会延续今年疲软的趋势，因国内需求和投资疲软，明年GDP增幅难以达到6%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11753756.md#1" target="_blank">2019中资股闪崩惨剧频发 惊现98%跌幅</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11753756.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/AFP_HongKong-exchange--150x120.jpg" align ="left"></a>2019年中资股在A股、港股、美股市场频频出现闪崩，涉及银行、科技、医药、新能源等众多行业，港股中资股出现98%跌幅，有中企被质疑欺诈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11753458.md#1" target="_blank">中共补贴超千亿  涉华为企业获金额最多</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11753458.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/de1f44e055206970a9d52ee264730b9d-150x120.jpg" align ="left"></a>今年中共政府补贴规模超过千亿元，科技企业的补贴更高，有数家获过十亿元补贴的科技企业是华为的供应商、代工厂或合作方，主要是国有（中共）控股企业和与国企相关的大型民营企业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 4:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11761256.md#1" target="_blank">中国华融债务危机 恐引台湾30档基金爆雷</a><br></h3>位居中国（中共）四大资产管理公司之首的“华融集团”，前党委书记兼董事长赖小民2018年4月因贪污落马，该集团也接连爆出债务危机。日前有媒体披露台湾35档债券型基金踩到地雷，因配置华融公司债导致至少有27亿台币（约人民币6.3亿元）曝险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752769.md#1" target="_blank">北京各行业利润下滑 房价由高位下跌近两成</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752769.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1411010353442663-600x400-150x120.jpg" align ="left"></a>中美贸易战下，中国经济受压，其中首都北京首当其冲。有内地媒体报道，近月因为北京的住宅单位出租情况并不理想，部分地产公司已经拒绝接收新的住宅租盘，以免堆积过多单位却不能租出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/txyzum203/djy/blob/master/gb/ncid283_2.md#1<br><a href="https://github.com/txyzum203/djy/blob/master/gb/ncid283_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/txyzum203/djy/blob/master/gb/ncid283_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_2.htm">http://www.epochtimes.com/gb/ncid283_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
