--- a/gb/news2008_5.md
+++ b/gb/news2008_5.md
@@ -1,8 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739692.md#1" target="_blank">【食光】圣诞义式脆饼 手感温度首选</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/biscotti-150x120.jpg" align ="left"></a>圣诞义式脆饼 Biscotti这个字的来自中世纪拉丁文biscotus，有二次烘焙的意思，这个义式脆饼需经由二次烘烤而成，是意大利传统点心，非常简单易做，吃起来的口感偏硬、脆、香。这种饼干容易保存，很适合外出旅行携带。而且相较其他的饼干，Biscotti较低脂低卡，因此很受到大众欢迎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:11 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739567.md#1" target="_blank">省钱也能吃得好 专访Budget Bytes创始人</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739567.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Spicy-Coconut-Vegetable-Stir-Fry-drizzle-sauce-copy-1200x900-150x120.jpg" align ="left"></a>享受美食不一定得花大钱，美食部落格Budget Bytes创始人贝丝·蒙塞尔，把证明这一点当作自己的任务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:55 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739598.md#1" target="_blank">倾斜13度 新型马桶可减少员工如厕时间</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739598.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_203216467_Subscription_L-150x120.jpg" align ="left"></a>上厕所是工作中忙里偷闲的好机会，但有些人会在如厕时滑手机或做其他事情，因而待了太长的时间，甚至影响到工作。现在，英国一家初创公司开发出一种新型马桶，号称可以减少员工待在厕所的时间，进而提高生产力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:15 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/10/29/n11621011.md#1" target="_blank">荣大夫的转骨方：帮孩子长高的古老秘密2</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/10/29/n11621011.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_512664499-150x120.jpg" align ="left"></a>中医惠泽中华民族几千年，在英国也越来越受欢迎。中医不只是治祛除病痛，还能用来调理身体。如果能抓住男孩、女孩们的生长发育时期增加营养，并采用中医长高秘方调理身体，除了能在青春期长高外，强壮的体魄也将让孩子受益一生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 9:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11737714.md#1" target="_blank">夜间频尿睡不好？有8大原因 医师教你摆脱</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11737714.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Frequent-urination_1480745483-150x120.jpg" align ="left"></a>半夜常起床上厕所吗？夜间频尿会影响睡眠品质，不仅隔日精神差，长期下来还会衍生健康问题。夜间起床排尿超过2次，就要注意身体亮红灯。夜间频尿的8大原因：1. 膀胱老化、摄护腺肥大。老年人因器官老化，容易出现夜尿。2. 膀胱过动症。年轻人因长期憋尿、感染等造成膀胱过动症，白天夜晚都频尿。3. 夜间多尿症。4. 浅眠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/22/n11738026.md#1" target="_blank">加国科学家创世界最小姜饼屋 小于头发宽度</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/22/n11738026.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Tiny_House-150x120.jpg" align ="left"></a>姜饼屋是圣诞节常见的装饰之一。在这个佳节即将到来之际，加拿大麦克马斯特大学（McMaster University）的科学家雕刻出号称全世界最小的姜饼屋，它比一根头发的宽度还小。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11737569.md#1" target="_blank">冬至你吃汤圆还是饺子？这样吃不怕热量高</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11737569.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dongzhi-dumpling-150x120.jpg" align ="left"></a>俗话说“冬至大如年”，冬至也是传统节庆之一，对于南北方华人而言，各自有应景美食。南方人在冬至多吃汤圆，北方人多吃水饺。在吃汤圆、水饺过节的同时，要注意食用份量或是调整食材，让一家人吃得更健康。汤圆热量高？留意4点就不怕。汤圆食材主要为糯米粉，吃多难消化。而包着馅料的水饺很容易一不小心就吃过量。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 6:27 AM			</td></tr>
@@ -29,6 +25,9 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11732742.md#1" target="_blank">漫步在云端 清境农场坐拥群山之间</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11732742.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191219-Joway-travel-01-01--150x120.jpg" align ="left"></a>青青草原是清境农场人气最旺的景点，在碧绿的草地上，可以望见毛茸茸绵羊与牛只漫步，旖旎的原野风光搭配远方山峦叠翠的背景，和远处的欧式建筑遥相呼应，散发着北国风光.............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11733062.md#1" target="_blank">未来半数年轻人买不起房 加拿大正迈向租房时代</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11733062.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_40770295-150x120.jpg" align ="left"></a>加拿大一些大城市的房价上涨失控多年，最近几年涨幅虽放缓，但还是在涨，未来恐怕不到半数年轻人买得起房，加拿大正日益迈向租房时代。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11732537.md#1" target="_blank">40%亚洲人喝酒会脸红  研究：恐易患失智症</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11732537.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/drinking_1092323018-150x120.jpg" align ="left"></a>新研究发现，喝酒后会脸红的人可能更易患老年失智症（又称阿兹海默症）。喝酒后的脸红反应是基因ALDH2变体造成。ALDH2基因的一项重要功能是清除酒精产生的乙醛毒素。其变体基因ALDH2*2的清除能力则大大降低，导致乙醛积累，身体呈现脸红的反应和炎症。酒精对携带这种基因的老年失智患者细胞损害更大......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 6:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11732330.md#1" target="_blank">无聊时别再滑手机了 8件事提高你的生产力</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11732330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/origami-papercrafting-origami-boxes-150x120.jpg" align ="left"></a>无聊时除了滑手机，你也可以做点提升自己、有建设性的事。以下8个建议不妨试试：1. 处理小事情；2. 清理杂物；3. 清除干扰；4. 处理担心事；5. 吸收新知；6. 看书；7. 运动、静坐；8. 做“无聊事”。研究发现，“做无聊的事”可以提升创造力。所以，不必害怕无聊，偶尔让脑袋放空，反而有好处。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 5:47 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11731339.md#1" target="_blank">吞口水能补肾精！中医教你4个最简单养肾动作</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11731339.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney-exercise2-1218-1-150x120.jpg" align ="left"></a>中医认为肾为先天之本，在所有的养生方法中，养肾是至关重要的一环。一些简单而又日常的动作，就可以达到养肾的效果。要谈养肾，必须要先了解中医的肾是什么，有哪些功能。肾位于腰部脊柱两侧，左右各一。肾的主要生理功能是：主藏精，主水，主纳气。4个日常养肾动作：1. 吞唾液；2. 腹式呼吸法；3. 擦涌泉穴；4. 擦肾俞穴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11730098.md#1" target="_blank">比猫熊珍贵 全球仅400只苏格兰野猫 野放工程大</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11730098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e6e35ccd84cac8b0b12f421f6388bf03-150x120.jpg" align ="left"></a>比中国大猫熊还要珍贵，苏格兰野猫一度濒危到只剩35只，经努力复育后，目前全球已达400只。苏格兰皇家动物学会（RZSS）获得欧盟捐赠320万英镑，（约台币1亿2900万元）预定2020年野放60只苏格兰野猫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/20/n11734309.md#1" target="_blank">汽车维修问与答：换阀盖垫圈不导致大问题</a><br></h3>汽车维修问与答
 
 读者Frank问：您好，您好！我是Frank，我上周把我的车送去一家维修车行更换阀盖垫圈，因为我的车最近一直都在这里维修保养的。可是换了阀盖垫圈后我都还没有取车开走，车行老板说这个车发动机出问题了，要更换一个二手发动机，估计费用要$10,000-12,000加元。我这几天都蒙了，不知道怎么办了？因.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:29 AM			</td></tr>
@@ -39,5 +38,6 @@
 尽管新型的电动汽车比相应的汽油汽车价格要高，但是长期而言，几乎可以保证最终电动汽车会更省钱。全国各地的驾驶员每天通勤可以通过驾驶电动汽车，而不是汽油车来节省开支，这已经不是什么秘密了。在5年的时间里，平均每个驾驶员将节省4,000至5,000美元的燃油成本。
 
 &nbsp;.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:17 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/19/n11732455.md#1" target="_blank">快餐不利健康 鹿特丹拟限制店家数量</a><br></h3>为了对抗肥胖，减少肥胖人口比例，帮助当地居民改善健康状况，荷兰鹿特丹市政府拟对本市快餐店的数量进行限制，重点限制范围是城市中心区域。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/txyzum203/djy/blob/master/gb/news2008_5.md#1<br><a href="https://github.com/txyzum203/djy/blob/master/gb/news2008_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/txyzum203/djy/blob/master/gb/news2008_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_5.htm">http://www.epochtimes.com/gb/news2008_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
