--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -33,6 +33,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770883.md#1">【翻墙必看】分析：王志民突然被撤职内幕</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772281.md#1">骆惠宁赴中联办首日打亲民牌 港人戒备</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772040.md#1">武汉肺炎病人过去一周医药费高达4.3万</a><br>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772193.md#1">2020首个调控 唐山买新房42个月内不准卖</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771908.md#1">组图：港人多区快闪 高喊“天灭中共”</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771937.md#1">香港医生议员质疑港府对武汉肺炎反应慢</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771590.md#1">神韵亚特兰大再爆满加座 精英感佩不已</a><br>
@@ -41,10 +42,8 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771280.md#1">【唐靖远快评】中联办突换人 骆惠宁上任3特别</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770622.md#1">【内幕】谍影重重 中共利用赴美游客窃密</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770833.md#1">《转法轮》发行25周年 澳学员感受大法洪恩</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770615.md#1">【拍案惊奇】解密：苏莱曼尼之死与美伊战争</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772223.md#1">沪指大幅震荡 3100点得而复失</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772046.md#1">武汉巴登城旅游项目发生坍塌事故 6死5伤</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772193.md#1">在唐山买新房42个月内不准卖</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772128.md#1">日本将在冲绳部署新型防空导弹 牵制中共</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770899.md#1">大陆又一平台爆雷 涉资千亿 近二百万人受害</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771337.md#1">受降雪影响 大陆131条高速135个路段封闭</a><br>
@@ -52,6 +51,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771567.md#1">陆搬家公司不让澳记者带走地球仪 原因荒谬</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771039.md#1">南阳地震是模拟地震？ 网友疑与石油勘测有关</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770942.md#1">北京最大积雪8厘米 105航班取消高速路封闭</a><br>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770615.md#1">【拍案惊奇】解密：苏莱曼尼之死与美伊战争</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770074.md#1">整顿港澳系统 张晓明或是下一个？</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751179.md#1">安徽合肥三位医护人员经历的残酷迫害</a><br>
@@ -92,7 +92,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,350,310 人
+- 共 349,357,475 人
 ```
 </strong>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
